# slo-burn-rate-predictor

./: README.md  pyproject.toml
docs/: EXECUTION_PLAN.md  GO_TO_MARKET.md  THREAT_MODEL.md  VERTICAL_IMPLEMENTATION.md
src/: app.py
